refactor: remove all processes involving emails via smtp
